--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,8 +1,9 @@
 *.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
+.gradle
+/.idea/libraries
+/.idea/workspace.xml
 /build
 /captures
+/local.properties
+/libs
