pubspec: Set author and version
Change-Id: I5f701a1601511cac55d367b3cef5541d2452998f
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: android_flutter_updater
 description: A Flutter plugin to allow updating Android.
-version: 0.0.1
-author:
+version: 1.0.0
+author: Kshitij Gupta <kshitijgm@gmail.com>
 homepage:
 
 environment:
