example: Add in app edits for updater plugin
- This still needs to be documented properly in README.md.

Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>
Change-Id: Ic7d1be8095dff20d953b7566aeed8aa9964d898b

--- a/example/.gitignore
+++ b/example/.gitignore
@@ -33,6 +33,7 @@
 **/android/captures/
 **/android/gradlew
 **/android/gradlew.bat
+**/android/libs
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
 
