--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -14,6 +14,16 @@ allprojects {
         google()
         jcenter()
     }
+
+    afterEvaluate {
+        if (plugins.hasPlugin('android') ||
+                plugins.hasPlugin('com.android.application') ||
+                plugins.hasPlugin('com.android.library')) {
+            dependencies {
+                compileOnly fileTree(dir: 'libs/', include: ['*.jar'])
+            }
+        }
+    }
 }
 
 rootProject.buildDir = '../build'
