--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,7 +22,7 @@ android {
 
     defaultConfig {
         minSdkVersion 24
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     lintOptions {
         disable 'InvalidPackage'
@@ -34,7 +34,10 @@ android {
 }
 
 dependencies {
-    def supportLibVersion = "28.0.0"
-    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
-    implementation "com.android.support:preference-v7:${supportLibVersion}"
+    implementation "androidx.appcompat:appcompat:1.1.0"
+    implementation "androidx.preference:preference:1.1.0"
+}
+
+dependencies {
+    compileOnly fileTree(dir: "libs/", include: ["*.jar"])
 }
